# plox

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  compile_commands.json  main.cpp
examples/: test.lox
include/: lexer.hpp  token.hpp
src/: lexer.cpp
